--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,8 +9,12 @@ jobs:
   build_and_push:
     runs-on: ubuntu-latest
     env:
-      IMAGE_NAME: sample-docker-image
+      IMAGE_NAME: php-guestbook-web
     steps:
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(TZ=JST-9 date +'%Y%m%d%H%M')"
+
       - name: checkout
         uses: actions/checkout@v2
 
@@ -30,4 +34,4 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
-            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:1.0.0
+            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ steps.date.outputs.date }}
