dbの初期データを追加、webにsyncを追加

--- a/web/skaffold.yaml
+++ b/web/skaffold.yaml
@@ -3,6 +3,9 @@ kind: Config
 build:
   artifacts:
   - image: php-guestbook-web
+    sync:
+      infer:
+        - '**/*'
 deploy:
   kubectl:
     manifests:
