--- a/db/values.yaml
+++ b/db/values.yaml
@@ -18,3 +18,12 @@ initdbScripts:
       `updated_at` DATETIME DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
       PRIMARY KEY (`id`)
     ) ENGINE = InnoDB;
+
+    USE guestbook;
+
+    SET CHARACTER_SET_CLIENT = utf8;
+    SET CHARACTER_SET_CONNECTION = utf8;
+
+    /* Insert Sample Guest Data */
+    INSERT INTO `guest` (`name`, `email`, `address`) VALUES ('山田花子', 'yamada@example.com', '東京都港区六本木');
+    INSERT INTO `guest` (`name`, `email`, `address`) VALUES ('田中一郎', 'tanaka@example.com', '東京都品川区高輪');
