--- a/web/skaffold.yaml
+++ b/web/skaffold.yaml
@@ -6,7 +6,14 @@ build:
     sync:
       infer:
         - '**/*'
-deploy:
-  kubectl:
-    manifests:
-    - kubernetes/*
+profiles:
+- name: localhost
+  deploy:
+    kubectl:
+      manifests:
+      - kubernetes/localhost/*
+- name: envy
+  deploy:
+    kubectl:
+      manifests:
+      - kubernetes/envy/*
