phpmyadminにnamespaceを設定する

--- a/dbadmin/skaffold.yaml
+++ b/dbadmin/skaffold.yaml
@@ -6,5 +6,6 @@ deploy:
       - name: phpmyadmin-release
         repo: https://charts.bitnami.com/bitnami 
         remoteChart: phpmyadmin
+        namespace: php-guestbook
         valuesFiles:
           - values.yaml
